# Deepsoil-Compile

./: .gitignore  MANIFEST.in  environment.yml  pyproject.toml  requirements-py38-linux.txt  setup.py
scripts/: suite_rs.py
src/: Deepsoil_Compile.py  Deepsoil_Compile_el.py  autogui.py  debundle_dpz.py  intensity_measures.py  matching_assessment.py  merge_sra.py  plotting_matched.py  response_spectrum.py
src/utils/: create_report.py  plotting_matched.py
utils/: parseAT2.py  results_viewer.py  scale.py  try.py
